Added minimum amount and amount multiplier to Elastic.

--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -201,7 +201,7 @@
                                     <div class="box-order__additional__title">
                                         {{ 'Přihoďte si k nákupu'|trans }}
                                     </div>
-                                    {{ productList.horizontalList(topProducts, "list-basket-additionals", 'h3', 'basket-additionals') }}
+                                    {{ productList.horizontalList(topProducts, "list-basket-additionals", 'h3', 'basket-additionals', true) }}
                                 </div>
                             </div>
                             <div id="js-order-preview" class="box-order__cart" data-url="{{ url('front_order_preview') }}">
