--- a/templates/Front/Content/Default/index.html.twig
+++ b/templates/Front/Content/Default/index.html.twig
@@ -35,7 +35,7 @@
                         {{ 'Vybíráme to nejlepší'|trans }}
                     </h1>
                     <div class="box-top-products__in">
-                        {{ productList.horizontalList(topProducts, "list-top-products", 'h3', 'top-products') }}
+                        {{ productList.horizontalList(topProducts, "list-top-products", 'h3', 'top-products', false) }}
                     </div>
                 </div>
             </div>
