--- a/templates/Front/Content/Product/bestsellingProductsList.html.twig
+++ b/templates/Front/Content/Product/bestsellingProductsList.html.twig
@@ -7,7 +7,7 @@
                     {{ 'Nejoblíbenější kousky'|trans }}
                 </div>
                 <div class="box-top-products__in">
-                    {{ productList.horizontalList(productViews, "list-top-products", 'h3', 'top-products') }}
+                    {{ productList.horizontalList(productViews, "list-top-products", 'h3', 'top-products', false) }}
                 </div>
             </div>
         </div>
