--- a/templates/Front/Content/Product/detail.html.twig
+++ b/templates/Front/Content/Product/detail.html.twig
@@ -40,7 +40,7 @@
                     <h2 class="box-accessories__title">
                         {{ accessoriesHeadline }}
                     </h2>
-                    {{ productList.horizontalList(accessories, "list-accessories-products", 'h3', 'accessories-products') }}
+                    {{ productList.horizontalList(accessories, "list-accessories-products", 'h3', 'accessories-products', true) }}
                 </div>
             </div>
         </div>
