--- a/templates/Front/Content/LastVisitedProducts/list.html.twig
+++ b/templates/Front/Content/LastVisitedProducts/list.html.twig
@@ -8,7 +8,7 @@
                     {{ 'Naposledy prohlížené produkty'|trans }}
                 </h2>
 
-                {{ productList.horizontalList(productViews,  "list-last-visited", 'h3', 'last-visited') }}
+                {{ productList.horizontalList(productViews,  "list-last-visited", 'h3', 'last-visited', false) }}
             </div>
         </div>
     </div>
