--- a/templates/Front/Inline/Cart/afterAddWindow.html.twig
+++ b/templates/Front/Inline/Cart/afterAddWindow.html.twig
@@ -3,7 +3,11 @@
     <div class="box-popup-add__content">
         <div class="box-popup-add__content__title">
             <span class="box-popup-add__content__title__text double-lined">
-                {{ 'Do košíku jste přidali'|trans }}
+                {# TODO KOD US-7670 #}
+                {{ 'Do košíku přidáno %quantity%&nbsp;ks<br>celkem za %price%'|transHtml({
+                    '%quantity%': cartItem.quantity|formatNumber,
+                    '%price%': quantifiedItemPrice.totalPrice.priceWithVat|price
+                }) }}
             </span>
         </div>
         <div class="box-popup-add__content__product">
