--- a/templates/Front/Inline/Cart/productAction.html.twig
+++ b/templates/Front/Inline/Cart/productAction.html.twig
@@ -10,8 +10,12 @@
     </a>
 {% else %}
     {{ form_start(form, {attr: {class: 'js-add-product dont-print', 'data-ajax-url': url('front_cart_add_product_ajax'), 'multipleForm': true}}) }}
-    <span class="form-input-spinbox js-spinbox">
-        {{ form_widget(form.quantity, { attr: { class: 'form-input-spinbox__input input-no-style js-spinbox-input', 'data-spinbox-min': 1}}) }}
+    <span class="form-input-spinbox js-spinbox{% if not showAmountInput %} display-none{% endif %}">
+        {{ form_widget(form.quantity, { attr: {
+            class: 'form-input-spinbox__input input-no-style js-spinbox-input',
+            'data-spinbox-min': productActionView.minimumAmount,
+            'data-spinbox-step': productActionView.amountMultiplier
+        }}) }}
         <button type="button" class="btn-no-style form-input-spinbox__btn js-spinbox-plus">+</button>
         <button type="button" class="btn-no-style form-input-spinbox__btn form-input-spinbox__btn--minus js-spinbox-minus">-</button>
     </span>
