--- a/templates/Front/Inline/Cart/productAction.html.twig
+++ b/templates/Front/Inline/Cart/productAction.html.twig
@@ -12,8 +12,12 @@
     {{ form_start(form, {attr: {class: 'js-add-product dont-print', 'data-ajax-url': url('front_cart_add_product_ajax'), 'multipleForm': true}}) }}
     <div class="box-detail-add__action{% if type == 'small' %} box-detail-add__action--in-product-list{% endif %}">
         <div class="box-detail-add__action__spinbox">
-            <span class="form-input-spinbox{% if type == 'small' %} form-input-spinbox--small{% endif %} js-spinbox">
-                {{ form_widget(form.quantity, { attr: { class: 'form-input-spinbox__input input-no-style js-spinbox-input', 'data-spinbox-min': productActionView.minimumAmount, 'data-spinbox-step': productActionView.amountMultiplier } }) }}
+            <span class="form-input-spinbox{% if type == 'small' %} form-input-spinbox--small{% endif %} js-spinbox{% if not showAmountInput %} display-none{% endif %}">
+                {{ form_widget(form.quantity, { attr: {
+                    class: 'form-input-spinbox__input input-no-style js-spinbox-input',
+                    'data-spinbox-min': productActionView.minimumAmount,
+                    'data-spinbox-step': productActionView.amountMultiplier
+                } }) }}
                 <button type="button" class="btn-no-style form-input-spinbox__btn js-spinbox-plus"><i class="svg svg-plus"></i></button>
                 <button type="button" class="btn-no-style form-input-spinbox__btn form-input-spinbox__btn--minus js-spinbox-minus"><i class="svg svg-minus"></i></button>
             </span>
