stylelint: fix issues

--- a/src/Resources/styles/front/common/components/list/menu.less
+++ b/src/Resources/styles/front/common/components/list/menu.less
@@ -101,7 +101,7 @@
                 border-radius: 0 @radius @radius @radius;
                 box-shadow: @box-shadow-outer;
 
-                .open & {
+                .open &  {
                     display: block;
                 }
             }
@@ -135,7 +135,7 @@
             &--level-1 {
                 color: @color-f;
                 font-size: 16px;
-                font-weight: 700;;
+                font-weight: 700;
             }
 
             .open & {
