--- a/src/Resources/styles/front/common/components/box/detail.less
+++ b/src/Resources/styles/front/common/components/box/detail.less
@@ -74,7 +74,7 @@
 
         &__title {
             line-height: 42px;
-            margin-bottom: 0px;
+            margin-bottom: 0;
 
             font-size: 36px;
         }
