--- a/src/Resources/styles/front/common/components/box/filter.less
+++ b/src/Resources/styles/front/common/components/box/filter.less
@@ -63,7 +63,7 @@
             margin-bottom: 5px;
             padding: 8px 27px 7px 12px;
 
-            font-size: 13px;;
+            font-size: 13px;
             border-radius: @radius-small;
             color: @color-base;
             background-color: @color-f;
