--- a/src/Resources/styles/front/common/components/form/input-spinbox.less
+++ b/src/Resources/styles/front/common/components/form/input-spinbox.less
@@ -50,7 +50,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        top: 0px;
+        top: 0;
         right: 0;
         width: @form-input-spinbox-buttons-width;
         height: @form-input-spinbox-height - 0.5px;
