--- a/src/Resources/styles/front/common/layout/header/cart.less
+++ b/src/Resources/styles/front/common/layout/header/cart.less
@@ -20,7 +20,7 @@
             margin-left: @cart-icon-gap;
 
             text-transform: none;
-            font-size: 16px;;
+            font-size: 16px;
         }
     }
 
