--- a/templates/Front/Content/Advert/box.html.twig
+++ b/templates/Front/Content/Advert/box.html.twig
@@ -1,10 +1,12 @@
 {% if advert and not advert.isHidden() %}
-    <div class="in-place in-place--{{advert.positionName}}">
+    {% set sizeInfoName = sizeInfo ?? advert.positionName %}
+
+    <div class="in-place in-place--{{sizeInfoName}}">
         {% if advert.type == 'image' %}
             {% if advert.link == null %}
-                {{ image(advert, { size: advert.positionName }) }}
+                {{ image(advert, { size: sizeInfoName }) }}
             {% else %}
-                <a href="{{ advert.link }}">{{ image(advert, { size: advert.positionName }) }}</a>
+                <a href="{{ advert.link }}">{{ image(advert, { size: sizeInfoName }) }}</a>
             {% endif %}
         {% elseif advert.type == 'code' %}
             {{ advert.code | raw }}
