--- a/templates/Front/Inline/Product/detailAvailability.html.twig
+++ b/templates/Front/Inline/Product/detailAvailability.html.twig
@@ -17,8 +17,8 @@
             </span>
             <a
                 href="#"
-                class="box-detail__availability__stores underline-small"
-                onclick="Shopsys.window({ content: $('.js-availability-table_{{ product.id }}').html() }); return false;"
+                class="box-detail__availability__stores underline-small js-detail-availability-window-opener"
+                data-product-id="{{ product.id }}"
                 >
                 {% transchoice stocksWithoutZeroQuantityOnPickupPlaceStore|length with { '%stocksWithoutZeroQuantityOnStoreCount%': stocksWithoutZeroQuantityOnPickupPlaceStore|length } %}
                 {1} %stocksWithoutZeroQuantityOnStoreCount% prodejně|
