[US-7335] Product Gift
- show gift at category list and search list
- changed value of gift to 0
- gift export to elastic search
- changed text from 0 Kč to "Zdarma"

--- a/templates/Front/Content/Order/preview.html.twig
+++ b/templates/Front/Content/Order/preview.html.twig
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="list-cart-preview__item__price">
-            {{ price|price }}
+            {{ price|priceText }}
         </div>
     </li>
 {% endmacro %}
