--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -196,7 +196,7 @@
                                         {{ gift.name }}
                                     </a>
                                     <div class="box-detail__gift__info__text">
-                                        {{ 'Ke každému nákupu dárek v hodnotě'|trans }}
+                                        {{ 'Vyberte si dárek <strong>zdarma</strong> v hodnotě'|trans|raw }}
                                         <strong> {{ getProductSellingPrice(gift).priceWithVat|price }}</strong>
                                     </div>
                                 </div>
