[US-7335] Product Gift
- show gift at category list and search list
- changed value of gift to 0
- gift export to elastic search
- changed text from 0 Kč to "Zdarma"

--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -142,8 +142,8 @@
                                                         <label class="css-checkbox__image" for="{{ form.chosenGifts[cartItem.product.id][giftVariant.gift.id].vars.id }}">
                                                             {{ 'Chceš dárek'|trans }}
                                                             {{ giftVariant.gift.name }}
-                                                            {{ 'v hodnotě'|trans }} {{ getProductSellingPrice(giftVariant.gift).priceWithVat|price }} {{ 'za '|trans }} {{ giftVariant.price|price }} {{ '?' }}
-                                                        </label>
+                                                            {{ 'zdarma' }}
+                                                            {{ 'v hodnotě'|trans }} {{ getProductSellingPrice(giftVariant.gift).priceWithVat|price }}{{ '?' }}                                                        </label>
                                                     </div>
                                                 {% endfor %}
                                             </div>
