--- a/templates/Front/Content/Order/preview.html.twig
+++ b/templates/Front/Content/Order/preview.html.twig
@@ -12,7 +12,7 @@
             </span>
         </div>
         <div class="list-cart-preview__item__price">
-            {{ price|price }}
+            {{ price|priceText }}
         </div>
     </li>
 {% endmacro %}
