design: edit design issues

--- a/src/Resources/styles/front/common/components/box/price-slider.less
+++ b/src/Resources/styles/front/common/components/box/price-slider.less
@@ -1,37 +1,62 @@
 @box-price-slider-inputs-gap: 10px;
 
+@box-price-slider-form-text-width: 25px;
+
 .box-price-slider {
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
+    margin-bottom: 16px;
+
+    border-radius: @radius-small;
 
     &__form {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
 
-        &__input {
-            position: relative;
-            width: 50%;
+        &__item {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            width: @calc-base / 2;
 
-            input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-                color: @color-base;
-                opacity: 1; /* Firefox */
+            &__text {
+                padding-right: 4px;
+                width: @box-price-slider-form-text-width;
+
+                font-size: @font-size-small;
+                color: @color-gray;
             }
 
-            input:-ms-input-placeholder { /* Internet Explorer 10-11 */
-                color: @color-base;
-            }
+            input {
+                max-width: calc(~"100% - @{box-price-slider-form-text-width}");
+                
+                font-size: @font-size-small;
+                font-weight: 700;
 
-            input::-ms-input-placeholder { /* Microsoft Edge */
-                color: @color-base;
+                &::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+                    color: @color-base;
+                    opacity: 1; /* Firefox */
+                    font-weight: 700;
+                }
+    
+                &:-ms-input-placeholder { /* Internet Explorer 10-11 */
+                    color: @color-base;
+                    font-weight: 700;
+                }
+    
+                &::-ms-input-placeholder { /* Microsoft Edge */
+                    color: @color-base;
+                    font-weight: 700;
+                }
             }
 
             &--left {
-                margin-right: @box-price-slider-inputs-gap/2;
+                padding-right: @box-price-slider-inputs-gap/2;
             }
 
             &--right {
-                margin-left: @box-price-slider-inputs-gap/2;
+                padding-left: @box-price-slider-inputs-gap/2;
             }
         }
     }
