--- a/src/Resources/styles/front/common/components/box/preview.less
+++ b/src/Resources/styles/front/common/components/box/preview.less
@@ -1,8 +1,10 @@
 @box-preview-bg: @color-f;
 @box-preview-width: @box-order-cart-width;
 @box-preview-gap: 90px;
-@box-preview-padding: 30px 40px 0 40px;
+@box-preview-padding: 30px 30px 0 30px;
 @box-preview-padding-small: 15px 20px 0 20px;
+
+@box-preview-coupone-code-button-width: 92px;
 
 .box-preview {
     display: flex;
@@ -11,38 +13,24 @@
 
     background-color: @box-preview-bg;
 
-    @media @query-md {
-        width: @box-preview-width + @box-preview-gap;
-    }
-
-    @media @query-vl {
-        padding-left: @box-preview-gap;
-    }
-
-    &__title {
-        line-height: 20px;
-        margin-bottom: 15px;
-
-        color: @color-brown-light;
-        font-size: 15px;
-        font-family: @font-alt;
-        font-weight: 700;
-        text-transform: uppercase;
-    }
-
     &__row {
         padding: @box-preview-padding-small;
 
         background-color: @color-f;
-        border: 3px solid @color-gray;
+        border-radius: @radius;
+
+        @media @query-md {
+            border: 3px solid @color-border;
+        }
 
         @media @query-vl {
             padding: @box-preview-padding;
         }
 
         &--dark {
-            background-color: @color-gray;
             padding-bottom: 20px;
+
+            background-color: @color-box;
         }
 
         &--no-bottom {
@@ -50,14 +38,30 @@
         }
 
         &--thin-top-border {
-            border-top: 2px solid @color-gray;
+            padding-top: 14px;
+
+            border-top: 1px solid @color-border;
         }
+
+        &--without-radius {
+            border-radius: 0;
+        }
+
+        &--without-radius-bottom {
+            border-radius: @radius @radius 0 0;
+        }
+
+        &--without-radius-top {
+            border-radius: 0 0 @radius @radius;
+        }
+    }
+
+    &__back {
+        margin-bottom: 2px;
     }
 
     &__coupone {
         &__title {
-            margin-bottom: 13px;
-
             color: @color-base;
 
             &__label {
@@ -66,32 +70,37 @@
             }
         }
 
-        &__input {
-            display: none;
+        &__text {
+            display: block;
+            width: 100%;
+            margin-top: 10px;
+        }
 
-            &.active {
-                display: block;
-                position: relative;
-            }
+        &__code {
+            display: flex;
+            flex-direction: row;
 
-            .input {
-                width: 100%;
+            &__input {
+                width: calc(~"100% - @{box-preview-coupone-code-button-width}");
+                
+                border-right: 0;
+                border-radius: @radius-small 0 0 @radius-small;
             }
 
             &__button {
-                position: absolute;
-                top: 13px;
-                right: 15px;
+                width: @box-preview-coupone-code-button-width;
+
+                border-radius: 0 @radius-small @radius-small 0;
             }
         }
     }
 
     &__conditions {
         text-align: center;
-        line-height: 22px;
+        line-height: 24px;
         margin-bottom: 20px;
 
-        color: @color-brown-light;
+        color: @color-base;
         font-size: 14px;
         font-family: @font-alt;
 
@@ -102,16 +111,22 @@
     }
 
     &__button {
-        margin-bottom: 30px;
-        padding: 0 10px;
+        margin-bottom: 24px;
+        padding: 5px 10px;
 
         text-decoration: uppercase;
-        font-size: 18px;
+        text-transform: uppercase;
+        font-size: 20px;
 
         &__icon {
-            position: relative;
-            top: 2px;
-            right: 5px;
+            display: none;
+
+            @media @query-sm {
+                display: inline-block;
+                position: relative;
+                top: 2px;
+                right: 5px;
+            }
         }
     }
 }
