--- a/src/Resources/styles/front/common/core/base.less
+++ b/src/Resources/styles/front/common/core/base.less
@@ -32,7 +32,7 @@ fieldset {
     padding: 30px;
     margin-bottom: 10px;
 
-    background-color: @color-gray;
+    background-color: @color-light;
 }
 
 img {
