--- a/templates/Front/Layout/base.html.twig
+++ b/templates/Front/Layout/base.html.twig
@@ -6,6 +6,7 @@
         <meta name="description" content="{% block meta_description %}{% endblock %}">
         <meta http-equiv="X-UA-Compatible" content="IE=11" />
         <meta name="robots" content="noindex, nofollow">
+        {% block meta_robots %}{% endblock %}
 
         {{ render(controller('App\\Controller\\Front\\GtmController:headAction')) }}
 
