design: add style for add button

--- a/src/Resources/styles/front/common/components/list/accessories-products.less
+++ b/src/Resources/styles/front/common/components/list/accessories-products.less
@@ -110,10 +110,8 @@
                 height: @list-accessories-products-item-image-size;
             }
 
-
             img {
                 .center-image();
-                max-width: @list-accessories-products-item-image-size/2;
             }
         }
 
@@ -192,6 +190,11 @@
                     }
                 }
             }
+        }
+
+        &__button-add {
+            text-align: center;
+            margin-top: auto;
         }
     }
 }
