--- a/src/Resources/styles/front/common/helpers/main.less
+++ b/src/Resources/styles/front/common/helpers/main.less
@@ -113,7 +113,7 @@
         height: 2px;
         width: 100%;
         left: 0;
-        bottom: 27px;
+        top: -8px;
 
         background-color: @color-add;
     }
